--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,15 @@
 .Header {
-  background: red;
+  background: #007acc;
   margin-bottom: 1.45rem;
+  & .linkWrapper {
+    margin: 0 auto;
+    max-width: 960px;
+    padding: 1.45rem 1.0875rem;
+    & .header {
+      & .link {
+        color: #dd3a0a;
+        text-decoration: none;
+      }
+    }
+  }
 }
